[package]
name = "h3bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.1"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8.3"
tokio = { version = "1.52.1", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
