[package]
name = "proxy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "logging", "tls12"] }
aws-lc-rs = "1.12"
quinn = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.1"
bytes = "1"
futures = "0.3"
rustls-pki-types = "1"
rustls-pemfile = "2.2.0"
rcgen = "0.13"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-rustls = "0.26"
mimalloc = "0.1.49"
socket2 = { version = "0.6.3", features = ["all"] }
libc = "0.2.185"
