[package]
name = "proxy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
http = "1.4.0"
socket2 = { version = "0.6.3", features = ["all"] }
libc = "0.2.185"
