[package]
name = "proxy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
http = "1.4.0"
socket2 = { version = "0.6.3", features = ["all"] }
libc = "0.2.185"
core_affinity = "0.8.3"
bytes = "1.11.1"
brotli = "8.0.2"
flate2 = "1.1.9"
reqwest = "0.13.2"
lazy_static = "1.5.0"
async-compression = { version = "0.4.41", features = ["tokio", "brotli", "gzip"] }
futures-util = "0.3.32"
